feat: add functionality for a lobby server
